<resources>
    <string name="app_name">行動電商A紅利數交換平台</string>
    <string name="title">行動電商A\n紅利數交換平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="request_data_empty">"無資料"</string>
    <string name="directionText">使用說明</string>
    <string name="logout">登    出</string>
    <string name="news">最新消息</string>
    <string name="bonus">特約發點</string>
    <string name="advertisement">刊登廣告申請</string>
    <string name="setting">功能設置</string>
    <string name="apply">申請</string>
    <string name="applyIn">申請加入</string>
    <string name="preferential">優惠店</string>
    <string name="special">特約店</string>
    <string name="check">審核中</string>
    <string name="scan">掃描/推薦</string>
    <string name="search">轉換平台點數</string>
    <string name="bonus_search">紅利點數查詢</string>
    <string name="store_search">搜尋店家</string>
    <string name="gcmlayout">轉換點數</string>
    <string name="remind">提醒</string>
    <string name="remind_volume">訊息提示聲音音量</string>
    <string name="shock">震動</string>
    <string name="language">語言</string>
    <string name="chinese">繁體中文</string>
    <string name="basic_data">基本資料</string>
    <string name="change_pwd">密碼變更</string>
    <string name="hide_button">隱藏申請優惠/特約店按鈕</string>
    <string name="update">可更新</string>
    <string name="app">APP版本</string>
    <string name="version"> %1$s</string>
    <string name="opinion">意見回饋</string>
    <string name="login_layout_title">移動消費 致富商機</string>
    <string name="login_layout_account">會員帳號</string>
    <string name="login_layout_account_hint">輸入手機號碼或信箱</string>
    <string name="login_layout_password">會員密碼</string>
    <string name="login_layout_password_hint">密碼最少六碼</string>
    <string name="login_layout_https">HTTPS</string>
    <string name="login_layout_stable">常駐</string>
    <string name="login_layout_show_pwd">顯示密碼</string>
    <string name="login_layout_authenticate">驗證碼</string>
    <string name="login_layout_authenticate_hint">請輸入驗證碼</string>
    <string name="login_layout_forget_password">忘記密碼</string>
    <string name="login_layout_register">註冊會員</string>
    <string name="login_layout_reset">清除重設</string>
    <string name="login_layout_send">確認送出</string>
    <string name="login_block">用戶已被封鎖</string>
    <string name="delete_point">優惠折點</string>
    <string name="request_registered_scuess">"註冊成功"</string>
    <string name="request_registered_fail">"資料重複"</string>
    <string name="request_registered_fail_phone">"手機號碼重複"</string>
    <string name="request_registered_fail_email">"電子信箱重複"</string>
    <string-array name="registered_layout_country">
        <item>台灣</item>
        <item>馬來西亞</item>
        <item>新加坡</item>
        <item>韓國</item>
        <item>日本</item>
        <item>香港</item>
        <item>緬甸</item>
    </string-array>
    <string name="registered_layout_sex">性 別</string>
    <string name="registered_layout_account">會員帳號</string>
    <string name="registered_layout_name">會員姓名</string>
    <string name="registered_layout_title">集客註冊</string>
    <string name="registered_layout_remind">*為必填欄位</string>
    <string name="registered_layout_name_hint">請輸入姓名</string>
    <string name="registered_layout_account_phone_hint">請輸入手機號碼</string>
    <string name="registered_layout_account_email_hint">請輸入電子郵件</string>
    <string name="registered_layout_account_password">會員密碼</string>
    <string name="registered_layout_account_password_hint">密碼最少六碼</string>
    <string name="registered_layout_birth">生日日期</string>
    <string name="registered_layout_birth_hint">YYYY/MM/DD</string>
    <string name="registered_layout_recommend">推薦人</string>
    <string name="registered_layout_recommend_hint">QR碼</string>
    <string name="registered_layout_recommend_send">掃描</string>
    <string name="registered_layout_authenticate">認證碼</string>
    <string name="registered_layout_authenticate_hint">請輸入認證碼</string>
    <string name="registered_layout_reset">清除重填</string>
    <string name="registered_layout_send">確認送出</string>
    <string name="version_number">V 1.2</string>
    <string name="loading_please_login">"請先安裝一般會員 APP 並進行登入"</string>
    <string name="point_layout_title_tradeDate">交易日期</string>
    <string name="point_layout_title_tradeTime">交易時間</string>
    <string name="point_layout_title_people">"收點者"</string>
    <string name="point_layout_title_money">"消費金額"</string>
    <string name="point_layout_title">"紅利紀錄"</string>
    <string name="point_layout_search">"搜尋"</string>
    <string name="point_layout_edit">"編輯"</string>
    <string name="point_dialog_input_point">請輸入點數</string>
    <string name="csv_fragment_title">匯出CSV表單</string>
    <string name="csv_fragment_search">日期\n查詢</string>
    <string name="csv_fragment_symbol">~</string>
    <string name="csv_fragment_start">開始日期</string>
    <string name="csv_fragment_end">結束日期</string>
    <string name="csv_fragment_export">匯出</string>
    <string name="csv_fragment_id">編號</string>
    <string name="csv_fragment_phone">手機號碼</string>
    <string name="csv_fragment_money">消費金額</string>
    <string name="date_dialog_empty">請輸入日期</string>
    <string name="point_layout_key">輸入手機號碼</string>
    <string name="point_layout_csv">匯出\nCSV</string>
    <string name="phone_send_point_title">數字鍵</string>
    <string name="phone_send_point_prompt">請輸入電話號碼</string>
    <string name="phone_send_point_confirm">確認</string>
    <string name="phone_send_point_cancel">取消</string>
    <string name="phone_send_point_check_fail">無此會員</string>
    <string name="export_csv_dialog_check_password_title">匯出CSV密碼</string>
    <string name="export_csv_dialog_title">密碼</string>
    <string name="export_csv_dialog_promp">首次登入密碼請輸入身分證字號</string>
    <string name="export_csv_dialog_input">請輸入密碼</string>
    <string name="export_csv_dialog_confirm">確認</string>
    <string name="export_csv_dialog_success">已發送至電子信箱</string>
    <string name="export_csv_dialog_forget">忘記密碼</string>
    <string name="export_csv_dialog_fail1">發送失敗，未知錯誤</string>
    <string name="export_csv_dialog_fail2">發送失敗，密碼錯誤</string>
    <string name="change_pasword">會員密碼變更</string>
    <string name="export_csv_dialog_download">下載</string>
    <string name="export_csv_dialog_text3">之CSV表單</string>
    <string name="publish">刊登廣告申請</string>
    <string name="publish_success">刊登廣告成功</string>
    <string name="publish_fail">"刊登廣告維修中，請稍候重新嘗試"</string>
    <string name="special_csv_reset_password">匯出CSV密碼變更</string>
    <string name="send_verify_code">發 送 驗 證 碼</string>
    <string name="import_verify_code">請  輸  入  驗  證  碼</string>
    <string name="import_phone_number_email">請  輸  入   電  子  信  箱</string>
    <string name="forgot_password">忘記密碼</string>
    <string name="access">確  認  ，  下  一  步</string>
    <string name="verify_code_access">驗證碼正確</string>
    <string name="verify_code_fail">"驗證碼錯誤"</string>
    <string name="email_not_exist">電子信箱不存在</string>
    <string name="email_exist">電子信箱已存在</string>
    <string name="basic_email_hint">請輸入電子信箱</string>
    <string name="vip_success">驗證成功</string>
    <string name="vip_fail">驗證失敗</string>
    <string name="verify_code_error">驗證碼或電子信箱錯誤</string>
    <string name="send_verify_code_access">驗證碼發送成功</string>
    <string name="send_verify_code_error">驗證碼發送失敗</string>
    <string name="special_register_title">申請加入特約店</string>
    <string name="premium_register_title">申請加入優惠店</string>
    <string name="country">國  籍  別</string>
    <string name="check_clear_dialog_cancel">"取消"</string>
    <string name="check_clear_dialog_ok">"確定"</string>
    <string name="check_clear_dialog_message">"確定清除資訊嗎？"</string>
    <string name="privacy_policy">"隱 私 權 聲 明"</string>
    <string name="privacy_policy_content_top">"本隱私權政策（以下稱「政策」）只在說明GoBuy及相關公司（以下稱「GoBuy」或「本公司」如何收集、使用及分享本公司自GoBuy網站、裝置、應用城市與服務（以下合稱「服務」）之使用者所取得的個人資訊。GoBuy努力遵守本公司對所收集之你的相關資訊所是用全部法律。本政策須受該些法律所拘束、其可能比在此所敘述之內容更嚴格。）"</string>
    <string name="privacy_policy_content_middle">"本公司得另行通知新增或修訂本政策。本公司意得救部份服務發布不同的隱私權聲明，屆時本政策集不再適用。例如、本公司會在適用時透過「通知GoBuy使用情況回報」及「通知GoBuy錯誤回報」自你的裝置中所收集的資訊分別適用不同的政策"</string>
    <string name="privacy_policy_content_bottom">"注意：你的無限電信業者、行動作業係統提供者及/或第三方應用程式、工具列、服務、「外掛城市」、社群媒體平台和網站亦可能收集、使用以及分享你、你的裝置以及使用情況相關的資訊。GoBuy之隱私政策並不適用於熱河第三方以及其產品、行為或服務，GoBuy無法控制第三方如何收集、使用或保護你的資料。如有需要有關第三方隱私政策施行原則的詳細資訊，請參閱其隱私政策。請務必與信譽良好的第三方互動、連線。並從其下載應用程式。"</string>
    <string name="privacy_policy_content_check">"我已詳讀並同意此條款"</string>
    <string name="privacy_policy_disagree_button">不同意</string>
    <string name="privacy_policy_check_button">請勾選同意鈕</string>
    <string name="scratchcardservice_success">送出成功</string>
    <string name="showCorrectFriendError">好友電話或電子信箱錯誤</string>
    <string name="privacy_policy_agree_button">同意</string>
    <string name="point_layout_send">轉讓點數</string>
    <string name="point_layout_point">餘點: %1$d </string>
    <string name="point_layout_cost">消點: %1$d </string>
    <string name="point_layout_title_store">店家名稱</string>
    <string name="point_layout_title_trade">交易時間</string>
    <string name="point_layout_title_bonus">紅利點數</string>
    <string name="point_layout_title_am">上午</string>
    <string name="point_layout_title_pm">下午</string>
    <string name="latest_news">最新消息</string>
    <string name="premium_activity">優惠活動</string>
    <string name="special_activity">特約活動</string>
    <string name="special_register_country">國  籍  別</string>
    <string name="special_register_store_name">店家名稱</string>
    <string name="special_register_entity_store">實 體 店 面</string>
    <string name="special_register_virtual_store">虛 擬 店 面</string>
    <string name="special_register_job_type">行業類別</string>
    <string name="special_register_store_address">店家地址</string>
    <string name="special_register_contact_person">聯 絡 人</string>
    <string name="special_register_male">男</string>
    <string name="special_register_female">女</string>
    <string name="special_register_member_account">會員帳號</string>
    <string name="special_register_member_password">會員密碼</string>
    <string name="special_register_member_birthday">出生日期</string>
    <string name="special_register_id">驗 證 碼</string>
    <string name="special_register_phone_number">請 輸 入 手 機 號 碼</string>
    <string name="special_register_email">請 輸 入 電 子 信 箱</string>
    <string name="special_register_password">密碼長度至少為6個字元</string>
    <string name="special_register_birthday_edit_text">YYYY/MM/DD</string>
    <string name="special_register_verify_code">請輸入驗證碼</string>
    <string name="special_register_clear">清除重填</string>
    <string name="special_register_confirm">確認送出</string>
    <string name="special_register_clear_message">確定清除資訊嗎?</string>
    <string name="special_register_yes">確定</string>
    <string name="special_register_cancel">取消</string>
    <string name="preferential_register_title">申請加入優惠店</string>
    <string name="preferential_register_country">國  籍  別</string>
    <string name="preferential_register_store_name">店家名稱</string>
    <string name="preferential_register_entity_store">實 體 店 面</string>
    <string name="point_dialog_cancel">取消</string>
    <string name="point_dialog_submit">送出</string>
    <string name="scan_qr_code_search">掃描/推薦</string>
    <string name="scan_qr_code_premium_qrtext">優</string>
    <string name="scan_qr_code">限店家 QR 碼</string>
    <string name="scan_qr_code_show">顯示推薦 QR 碼</string>
    <string name="scan_qr_code_albums_save">儲存到相簿</string>
    <string name="scan_qr_code_pic_share">分享 QR 碼</string>
    <string name="scan_qr_code_url_share">分享連結</string>
    <string name="favorite_layout_title">我的最愛</string>
    <string name="favorite_layout_prompt">最多加入20筆</string>
    <string name="favorite_layout_remind">向左滑分享及刪除</string>
    <string name="scan_qr_code_premium_search">優惠店 QR 碼</string>
    <string name="scan_qr_code_albums_share_premium">傳送折點 QR 碼</string>
    <string name="special_qrcode_store_album">儲存到相簿</string>
    <string name="dialog_vip_title">VIP驗證</string>
    <string name="dialog_vip_input">請輸入驗證碼</string>
</resources>