<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorTransparent">

    <RelativeLayout
        android:layout_width="@dimen/fragment_normal_point_dialog_background_width"
        android:layout_height="@dimen/fragment_normal_point_dialog_password_background_height"
        android:layout_centerInParent="true"
        android:background="@drawable/layout_normal_point_background">

        <TextView
            android:id="@+id/title"
            android:layout_width="@dimen/fragment_normal_point_dialog_title_text_width"
            android:layout_height="@dimen/fragment_normal_point_dialog_title_text_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fragment_normal_point_dialog_title_text_margin_top"
            android:gravity="center"
            android:text="@string/dialog_vip_title"
            android:textColor="@color/MainFragmentNormalPointDialogTextColor"
            android:textSize="@dimen/fragment_normal_point_dialog_title_text_text_size" />

        <EditText
            android:id="@+id/input"
            android:layout_width="@dimen/fragment_normal_point_dialog_title_text_width"
            android:layout_height="@dimen/fragment_normal_point_dialog_title_text_height"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/activity_browse_store_button_width"
            android:background="@drawable/layout_normal_point_edit_background"
            android:gravity="center"
            android:hint="@string/dialog_vip_input"
            android:textColor="@color/MainFragmentNormalPointDialogTextColor"
            android:textSize="@dimen/fragment_normal_point_dialog_edit_size" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/fragment_normal_point_dialog_button_width"
            android:layout_height="@dimen/fragment_normal_point_dialog_title_text_height"
            android:layout_alignLeft="@id/input"
            android:layout_alignStart="@id/input"
            android:layout_below="@id/input"
            android:layout_marginTop="@dimen/fragment_normal_point_dialog_title_text_margin_top"
            android:background="@drawable/normal_dialog_button"
            android:text="@string/point_dialog_cancel"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/fragment_normal_point_dialog_edit_size" />

        <Button
            android:id="@+id/submit"
            android:layout_width="@dimen/fragment_normal_point_dialog_button_width"
            android:layout_height="@dimen/fragment_normal_point_dialog_title_text_height"
            android:layout_alignEnd="@id/input"
            android:layout_alignRight="@id/input"
            android:layout_below="@id/input"
            android:layout_marginTop="@dimen/fragment_normal_point_dialog_title_text_margin_top"
            android:background="@drawable/normal_dialog_button"
            android:text="@string/point_dialog_submit"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/fragment_normal_point_dialog_edit_size" />
    </RelativeLayout>
</RelativeLayout>