<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/ColorGeneralTheme">

        <ImageView
            android:layout_width="@dimen/toolbar_back_image_width"
            android:layout_height="@dimen/toolbar_back_image_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/toolbar_back_image_margin_left"
            android:layout_marginStart="@dimen/toolbar_back_image_margin_left"
            android:scaleType="fitCenter"
            android:src="@drawable/toolbar_back" />

        <View
            android:id="@+id/toolbar_back_touch"
            android:layout_width="@dimen/toolbar_back_touch"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/favorite_layout_title"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/toolbar_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/fragment_myfavorite_prompt_margin_left"
            android:layout_marginRight="@dimen/fragment_myfavorite_prompt_margin_left"
            android:text="@string/favorite_layout_prompt"
            android:textColor="@color/FragmentPromptTextColor"
            android:textSize="@dimen/fragment_myfavorite_prompt_text_size" />
    </RelativeLayout>

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:text="@string/favorite_layout_remind"
        android:textColor="@color/FragmentRemindTextColor"
        android:textSize="@dimen/fragment_myfavorite_remind_text_size" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_favorite_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/prompt"
        android:layout_centerHorizontal="true"
        android:background="@color/ColorWhite" />
</RelativeLayout>