<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ActivityQRcodeBackgroundColor">

    <RelativeLayout
        android:id="@+id/qrcode_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/ColorGeneralTheme">

        <ImageView
            android:layout_width="@dimen/toolbar_back_image_width"
            android:layout_height="@dimen/toolbar_back_image_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/toolbar_back_image_margin_left"
            android:layout_marginStart="@dimen/toolbar_back_image_margin_left"
            android:scaleType="fitCenter"
            android:src="@drawable/toolbar_back" />

        <View
            android:id="@+id/toolbar_back_touch"
            android:layout_width="@dimen/toolbar_back_touch"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:text="@string/scan_qr_code_search"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/toolbar_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/qrcode_item_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_qrcode_page_item_height"
        android:layout_below="@id/qrcode_toolbar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/qrcode_show_scanner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/ActivityQRcodePageItemBackgroundColor"
            android:gravity="center"
            android:text="@string/scan_qr_code"
            android:textColor="@color/ActivityQRcodePageItemTextColor"
            android:textSize="@dimen/fragment_qrcode_scan_from_album_text" />

        <TextView
            android:id="@+id/qrcode_show_recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/ActivityQRcodePageItemBackgroundColor"
            android:gravity="center"
            android:text="@string/scan_qr_code_show"
            android:textColor="@color/ActivityQRcodePageItemTextColor"
            android:textSize="@dimen/fragment_qrcode_scan_from_album_text" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/qrcode_scanner_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/qrcode_item_container" />

</RelativeLayout>